k8s/dept/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dept-service
  namespace: developer
spec:
  selector:
    app: dept
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
